@@ -1,3 +1,3 @@
-VERSION=5.02.00
-YEARS=2005-2019
+VERSION=5.03.00
+YEARS=2005-2020
 
