@@ -2,10 +2,13 @@
 
 tput clear
 
-GPP="g++ --std=c++14"
+GPP="g++ --std=c++2a"
 
 # CMD="$GPP -o driver -Wall -I../ driver.cc ../../errno/*.cc -L../tmp -lpattern -s"
-CMD="$GPP -o driver -Wall *.cc -lbobcat -s"
+CMD="$GPP -o driver -Wall *.cc -L../tmp -lpattern -lbobcat -s"
+#CMD="$GPP -o driver -Wall *.cc -L../tmp -lpattern -L../../tmp/liba -lbobcat -s"
+#CMD="$GPP -o driver -Wall *.cc -L../../tmp/liba -lbobcat -s"
+#CMD="$GPP -o driver -Wall *.cc -lbobcat -s"
 
 echo $CMD
 $CMD || exit 1
