@@ -19,18 +19,18 @@ struct ProcessEnums
         NONE                = 0,        // no piping/redirection
         STD                 = NONE,     // for backward compatibility reasons
 
-        CIN             	= 1 << 0,
-        COUT            	= 1 << 1,
-        CERR            	= 1 << 2,
+        CIN                 = 1 << 0,
+        COUT                = 1 << 1,
+        CERR                = 1 << 2,
         ALL                 = CIN | COUT | CERR,
-                        	
-        IGNORE_COUT     	= 1 << 3,
-        IGNORE_CERR     	= 1 << 4,
-        IGNORE_COUT_CERR    = IGNORE_COUT |	 IGNORE_CERR,
+                            
+        IGNORE_COUT         = 1 << 3,
+        IGNORE_CERR         = 1 << 4,
+        IGNORE_COUT_CERR    = IGNORE_COUT |  IGNORE_CERR,
 
-        MERGE_COUT_CERR 	= 1 << 5,
-                        	
-        DIRECT          	= 1 << 8,
+        MERGE_COUT_CERR     = 1 << 5,
+                            
+        DIRECT              = 1 << 8,
     };
 
     protected:
@@ -40,7 +40,7 @@ struct ProcessEnums
         {
             ALL_IOMODES     = (1 << 9) - 1,
 
-            IN_PIPE         = 1 << 10,
+            IN_PIPE         = 1 << 10,      // used by operator|
             OUT_PIPE        = 1 << 11,
 
             CLOSE_ON_EXEC   = 1 << 12,
